@@ -5,6 +5,8 @@ next:
           - fix offset calculation in rest api
           - Config Tool:
             - add authorization tab to contacts and contactgroups
+          - Business Process:
+            - delay calculation during core reloads
 
 2.26-2   Tue Dec 18 17:33:08 CET 2018
           - display external commands errors if possible
